// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parts: Data renders correctly with all props 1`] = `
<div
  className="part-data "
>
  <i>
    usd
  </i>
  <strong>
    23.00
  </strong>
</div>
`;

exports[`Parts: Data renders correctly without any props 1`] = `
<div
  className="part-data "
>
  <strong>
    N/A
  </strong>
</div>
`;
